--- a/projects/vos-error/Cargo.toml
+++ b/projects/vos-error/Cargo.toml
@@ -11,15 +11,15 @@ license = "MPL-2.0"
 edition = "2021"
 
 [dependencies]
-#diagnostic = "0.3.1"
+diagnostic = "0.3.3"
 peginator = { version = "0.3.0", optional = true }
 num = { version = "0.4.0", optional = true }
 bigdecimal = { version = "0.3.0", optional = true }
 serde_json = { version = "1.0.87", optional = true }
 
-[dependencies.diagnostic]
-git = "https://github.com/oovm/diagnostic-rs"
-rev = "cb893898"
+#[dependencies.diagnostic]
+#git = "https://github.com/oovm/diagnostic-rs"
+#rev = "cb893898"
 
 [dev-dependencies]
 
