--- a/projects/vos-core/Cargo.toml
+++ b/projects/vos-core/Cargo.toml
@@ -10,12 +10,12 @@ license = "MPL-2.0"
 edition = "2021"
 
 [dependencies]
-indexmap = "1.9.1"
-vos-ast = "0.1.0"
-num = "0.4.0"
+serde = { version = "1.0.147", features = ["derive"] }
+indexmap = { version = "1.9.1", features = ["serde"] }
+num = { version = "0.4.0", features = ["serde"] }
 
 [dependencies.vos-error]
-version= "0.2.3"
+version = "0.3.0"
 features = ["num"]
 
 [dev-dependencies]
