--- a/projects/vos-core/Cargo.toml
+++ b/projects/vos-core/Cargo.toml
@@ -13,15 +13,20 @@ edition = "2021"
 serde = { version = "1.0.147", features = ["derive"] }
 indexmap = { version = "1.9.1", features = ["serde"] }
 num = { version = "0.4.0", features = ["serde"] }
+bigdecimal = { version = "0.3.0", features = ["serde"] }
 
 [dependencies.vos-error]
 version = "0.3.0"
 features = ["num"]
 
 [dev-dependencies]
+openapiv3 = "1.0.1"
+json5 = "0.4.1"
 
 [build-dependencies]
 peginator = "0.3.0"
 
 [features]
-default = []
+default = ["validator", "faker"]
+faker = []
+validator = []
