--- a/projects/vos-core/Cargo.toml
+++ b/projects/vos-core/Cargo.toml
@@ -14,14 +14,12 @@ indenter = { version = "0.3.3", features = ["std"] }
 serde = { version = "1.0.147", features = ["derive"] }
 indexmap = { version = "1.9.1", features = ["serde"] }
 num = { version = "0.4.0", features = ["serde"] }
-bigdecimal = { version = "0.3.0", features = ["serde"] }
-url = { version = "2.3.1", features = ["serde"] }
-email_address = { version = "0.2.1", features = ["serde"] }
-uuid = { version = "1.2.1", features = ["serde"] }
+
 
 [dependencies.vos-error]
 version = "0.3.0"
-features = ["num"]
+path = "../vos-error"
+features = ["num", "bigdecimal", "email_address", "url"]
 
 [dev-dependencies]
 
