--- a/projects/vos-error/Cargo.toml
+++ b/projects/vos-error/Cargo.toml
@@ -13,9 +13,13 @@ edition = "2021"
 [dependencies]
 diagnostic = "0.3.3"
 peginator = { version = "0.3.0", optional = true }
-num = { version = "0.4.0", optional = true }
-bigdecimal = { version = "0.3.0", optional = true }
+num = { version = "0.4.0", features = ["serde"], optional = true }
+bigdecimal = { version = "0.3.0", features = ["serde"], optional = true }
 serde_json = { version = "1.0.87", optional = true }
+url = { version = "2.3.1", features = ["serde"], optional = true }
+email_address = { version = "0.2.1", features = ["serde"], optional = true }
+uuid = { version = "1.2.1", features = ["serde"], optional = true }
+
 
 #[dependencies.diagnostic]
 #git = "https://github.com/oovm/diagnostic-rs"
