--- a/projects/vos-core/Cargo.toml
+++ b/projects/vos-core/Cargo.toml
@@ -15,6 +15,7 @@ serde = { version = "1.0.147", features = ["derive"] }
 indexmap = { version = "1.9.1", features = ["serde"] }
 num = { version = "0.4.0", features = ["serde"] }
 voml-collection = "0.2.0"
+http = "0.2.8"
 
 [dependencies.vos-error]
 version = "0.3.1"
