--- a/projects/vos-core/Cargo.toml
+++ b/projects/vos-core/Cargo.toml
@@ -13,13 +13,13 @@ edition = "2021"
 indenter = { version = "0.3.3", features = ["std"] }
 serde = { version = "1.0.147", features = ["derive"] }
 indexmap = { version = "1.9.1", features = ["serde"] }
-num = { version = "0.4.0", features = ["serde"] }
 voml-collection = "0.2.0"
 http = "0.2.8"
 
 [dependencies.vos-error]
-version = "0.3.1"
-features = ["num", "bigdecimal", "email_address", "url", "serde_json"]
+version = "0.3.2"
+path = "../vos-error"
+features = ["num", "bigdecimal", "email_address", "url", "serde_json", "semver"]
 
 
 
