--- a/projects/vos-core/Cargo.toml
+++ b/projects/vos-core/Cargo.toml
@@ -11,27 +11,21 @@ edition = "2021"
 
 [dependencies]
 indenter = { version = "0.3.3", features = ["std"] }
-serde = { version = "1.0.147", features = ["derive"] }
-indexmap = { version = "1.9.1", features = ["serde"] }
-voml-collection = "0.3.0"
+serde = { version = "1.0.149", features = ["derive"] }
+indexmap = { version = "1.9.2", features = ["serde"] }
+voml-collection = "0.3.1"
 http = "0.2.8"
-
-[dependencies.vos-error]
-#version = "0.3.2"
-git = "https://github.com/voml/vos-rs"
-rev = "1f7c3540"
-features = ["num", "bigdecimal", "email_address", "url", "semver"]
-
+rand = { version = "0.8.5", features = ["small_rng"] }
+diagnostic-quick = "0.2.6"
 
 
 [dev-dependencies]
 
 
 [build-dependencies]
-peginator = "0.3.0"
+peginator = "0.6.0"
 
 [features]
 default = []
 faker = []
 validator = []
-json = ["vos-error/serde_json"]
