Parse license from string

--- a/projects/vos-core/Cargo.toml
+++ b/projects/vos-core/Cargo.toml
@@ -20,10 +20,9 @@ diagnostic-quick = "0.2.6"
 
 
 [dev-dependencies]
+peginator_codegen = "0.6.0"
 
 
-[build-dependencies]
-peginator = "0.6.0"
 
 [features]
 default = []
