--- a/projects/vos-core/Cargo.toml
+++ b/projects/vos-core/Cargo.toml
@@ -13,10 +13,13 @@ edition = "2021"
 indenter = { version = "0.3.3", features = ["std"] }
 serde = { version = "1.0.149", features = ["derive"] }
 indexmap = { version = "1.9.2", features = ["serde"] }
-voml-collection = "0.3.1"
-http = "0.2.8"
+voml-collection = "0.3.2"
 rand = { version = "0.8.5", features = ["small_rng"] }
-diagnostic-quick = "0.2.6"
+chrono = "0.4.23"
+
+[dependencies.diagnostic-quick]
+version = "0.2.9"
+features = ["email_address", "semver", "url", "num", "rust_decimal"]
 
 
 [dev-dependencies]
