--- a/projects/vos-for-rust/Cargo.toml
+++ b/projects/vos-for-rust/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "vos-ast"
+name = "vos-for-rust"
 version = "0.1.0"
 authors = ["Aster <192607617@qq.com>"]
 description = "..."
@@ -16,6 +16,8 @@ num = "0.4.0"
 bigdecimal = "0.3.0"
 peginator = "0.6.0"
 unicode-ident = "1.0.6"
+jsonrpc-core = "18.0.0"
+jsonrpc-derive = "18.0.0"
 
 [dependencies.vos-error]
 version = "0.3.2"
