Download protoc remotely

--- a/projects/vos-for-rust/Cargo.toml
+++ b/projects/vos-for-rust/Cargo.toml
@@ -15,9 +15,18 @@ indexmap = "1.9.2"
 num = "0.4.0"
 bigdecimal = "0.3.0"
 peginator = "0.6.0"
-unicode-ident = "1.0.6"
+unicode-ident = "1.0.8"
 jsonrpc-core = "18.0.0"
 jsonrpc-derive = "18.0.0"
+prost = "0.11.8"
+prost-types = "0.11.8"
+prost-build = "0.11.8"
+
+
+[dependencies.vos-ast]
+path = "../vos-ast"
+#version = "0.3.2"
+#features = ["bigdecimal", "peginator"]
 
 [dependencies.vos-error]
 version = "0.3.2"
